--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -78,6 +78,10 @@ html {
 	margin: 0px 30px;
 }
 
+#info-content .container .text-container {
+	grid-row-start: 0;
+}
+
 /* Preview Content */
 .preview-content {
 	font-weight: 800;
@@ -106,7 +110,15 @@ html {
 }
 
 /* Texts */
+#info-container .container .text-container {
+	grid-row-start: 1;
+	grid-row-end: 3;
+}
+
 .text-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	grid-row-start: 2;
 	overflow: hidden;
 }
@@ -119,19 +131,17 @@ html {
 
 .topic {
 	font-size: 2.5rem;
-	margin-top: 20px;
 }
 
 .subtopic {
 	text-indent: 1.6rem;
 	font-size: 2.2rem;
-	margin-top: 2.5px;
 }
 
 .text {
 	text-indent: 1.6rem;
 	font-size: 2rem;
-	line-height: 2.5rem;
+	line-height: 2.3rem;
 	width: calc(100vw/1.5);
 }
 
