--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -118,7 +118,6 @@ html {
 .text-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	grid-row-start: 2;
 	overflow: hidden;
 }
@@ -127,6 +126,13 @@ html {
 	font-size: 3rem;
 	font-weight: bolder;
 	text-align: center;
+	margin-top: 15px;
+	padding-bottom: calc(50vh/3.5);
+}
+
+#info-container .text-container .title,
+#how-we-merged-container .text-container .title {
+	padding-bottom: 0px;
 }
 
 .topic {
