--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -118,17 +118,15 @@ html {
 .text-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
 	grid-row-start: 2;
 	overflow: hidden;
 }
 
-#info-container .text-container div {
-	transform: translateY(0%);
-}
-
 .text-container div {
-	transform: translateY(-25%);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 100%;
 }
 
 .title {
