Arrumando a extensao das fotos

--- a/styles/quem_somos.css
+++ b/styles/quem_somos.css
@@ -188,14 +188,14 @@ html {
 	}
 
 	#who-we-are-container {
-		background-image: url(../images/about/PC/o-que-e-a-novaera-container.png);
+		background-image: url(../images/about/PC/o-que-e-a-novaera-container.jpg);
 	}
 
 	#how-we-merged-container {
-		background-image: url(../images/about/PC/como-a-novaera-surgiu.png);
+		background-image: url(../images/about/PC/como-a-novaera-surgiu.jpg);
 	}
 
 	#our-goal-container {
-		background-image: url(../images/about/PC/objetivo.png);
+		background-image: url(../images/about/PC/objetivo.jpg);
 	}
 }
