Feature das formas de contato sendo trabalhada
Comecei a faze-la pela animação

--- a/styles/contato.css
+++ b/styles/contato.css
@@ -72,11 +72,59 @@ body {
 }
 
 .contact {
+	position: relative;
 	display: flex;
 	width: 270px;
 	height: 270px;
 	border-radius: 100%;
 	background-color: #22BB73;
+}
+
+.content-hide {
+	position: absolute;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	transition: 0.3s ease-in-out;
+	opacity: 0;
+}
+
+.contact > img {
+	position: absolute;
+	transition: 0.3s ease-in-out;
+}
+
+.contact:hover > img {
+	opacity: 0;
+}
+
+.contact:hover .content-hide {
+	opacity: 1;
+}
+
+.content-hide p {
+	width: calc(100%-30px);
+	font-size: 24px;
+	text-align: center;
+	font-weight: bold;
+	color: black;
+}
+
+.buttons {
+	display: flex;
+	column-gap: 20px;
+}
+
+.buttons button {
+	font-size: 16px;
+	width: 80px;
+	border-radius: 10px;
+	background-color: var(--color05);
+	color: white;
+	padding: 5px;
+	border: none;
+	cursor: pointer;
 }
 
 /* Fourth Container */
