--- a/styles/contato.css
+++ b/styles/contato.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
+html {
+	height: fit-content;
+	width: fit-content;
+}
+
 body {
+	overflow-x: hidden;
 	font-family: Roboto;
 }
 
@@ -80,6 +86,15 @@ body {
 	background-color: #22BB73;
 }
 
+.contact > img {
+	position: absolute;
+	transition: 0.3s ease-in-out;
+}
+
+.contact:hover > img {
+	opacity: 0;
+}
+
 .content-hide {
 	position: absolute;
 	display: flex;
@@ -90,24 +105,15 @@ body {
 	opacity: 0;
 }
 
-.contact > img {
-	position: absolute;
-	transition: 0.3s ease-in-out;
-}
-
-.contact:hover > img {
-	opacity: 0;
-}
-
 .contact:hover .content-hide {
 	opacity: 1;
 }
 
 .content-hide p {
-	width: calc(100%-30px);
 	font-size: 24px;
-	text-align: center;
 	font-weight: bold;
+	text-align: center;
+	width: calc(100%-30px);
 	color: black;
 }
 
@@ -119,11 +125,11 @@ body {
 .buttons button {
 	font-size: 16px;
 	width: 80px;
+	padding: 5px;
+	border: none;
 	border-radius: 10px;
 	background-color: var(--color05);
 	color: white;
-	padding: 5px;
-	border: none;
 	cursor: pointer;
 }
 
@@ -137,6 +143,8 @@ body {
 .bottom-detail {
 	position: absolute;
 	bottom: 0;
+	left: 0;
+	overflow-x: hidden;
 	z-index: -1;
 }
 
@@ -202,8 +210,8 @@ footer {
 }
 
 footer > p {
-	font-size: 16px;
-	padding: 15px 0px;
-	font-weight: bold;
 	text-align: center;
+	font-size: 16px;
+	font-weight: bold;
+	padding: 15px 0px;
 }
