--- a/styles/contato.css
+++ b/styles/contato.css
@@ -1,13 +1,8 @@
 @charset "UTF-8";
 
-html {
-	height: fit-content;
-	width: fit-content;
-}
-
 body {
-	overflow-x: hidden;
 	font-family: Roboto;
+	overflow-x: hidden;
 }
 
 .flex-center-align {
@@ -36,6 +31,7 @@ body {
 }
 
 .first-container .logo-text {
+	text-align: center;
 	font-weight: 900;
 	font-style: italic;
 	font-size: 40px;
@@ -56,38 +52,46 @@ body {
 }
 
 .second-container__title {
-	font-size: 32px;
+	font-size: 4rem;
 }
 
 .second-container__text {
-	font-size: 24px;
+	font-size: 2.4rem;
 	text-align: center;
 }
 
 /* Third Container */
 .third-container {
 	display: flex;
-	padding: 30px 0px;
 	background-image: linear-gradient(to right, #1A3126 -40%, #155939);
 }
 
 .contact-forms-wrapper {
+	position: relative;
 	display: flex;
+	align-items: center;
 	flex-direction: column;
 	row-gap: 30px;
 }
 
 .contact {
-	position: relative;
 	display: flex;
-	width: 270px;
-	height: 270px;
+	width: 300px;
+	height: 300px;
+	margin: 30px;
 	border-radius: 100%;
 	background-color: #22BB73;
+	transition: 0.5s ease-out;
+}
+
+.contact.expanded {
+	margin: 0;
 }
 
 .contact > img {
 	position: absolute;
+	width: 50%;
+	height: 50%;
 	transition: 0.3s ease-in-out;
 }
 
@@ -133,6 +137,54 @@ body {
 	cursor: pointer;
 }
 
+.expanded .content-hide, .expanded > img {
+	display: none;
+}
+
+.expanded {
+	transform: rotate(360deg);
+	animation: expande 0.5s ease-out forwards;
+	animation-delay: 0.4s;
+}
+
+@keyframes expande {
+	100% {
+		border-radius: 0;
+		width: 100vw;
+	}
+}
+
+.extra-content {
+	display: none;
+	padding: 15px;
+}
+
+.expanded .extra-content {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	height: 100%;
+}
+
+.extra-content > h4 {
+	align-self: flex-start;
+	text-align: center;
+	font-size: 3rem;
+	margin-bottom: 15px;
+}
+
+.extra-content > ul {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	row-gap: 5px;
+	margin-left: 20px;
+}
+
+.extra-content > ul > li {
+	font-size: 1.8rem;
+}
+
 /* Fourth Container */
 .fourth-container {
 	position: relative;
@@ -153,7 +205,7 @@ body {
 .fourth-container h2 {
 	margin: 15px 0px;
 	margin-bottom: 30px;
-	font-size: 20px;
+	font-size: 3rem;
 }
 
 .form-wrapper {
@@ -174,8 +226,9 @@ body {
 }
 
 .input-field {
+	font-size: 1.5rem;
 	font-weight: normal;
-	height: 45px;
+	height: 4.5rem;
 	padding: 5px;
 	border: solid 2px var(--color05);
 	border-radius: 10px;
@@ -185,7 +238,7 @@ body {
 }
 
 .textarea {
-	height: 120px;
+	height: 12rem;
 }
 
 .input-field:focus {
@@ -216,4 +269,31 @@ footer > p {
 	font-size: 16px;
 	font-weight: bold;
 	padding: 15px 0px;
+}
+
+@media (min-width: 768px) {
+	.first-container {
+		height: 300px;
+	}
+
+	.first-container .logo {
+		width: 130px;
+	}
+
+	.first-container .logo-text {
+		font-size: 5rem;
+	}
+
+	.second-container {
+		height: 150px;
+	}
+
+	.third-container .contact {
+		width: 500px;
+		height: 500px;
+	}
+
+	.fourth-container {
+
+	}
 }
