--- a/styles/contato.css
+++ b/styles/contato.css
@@ -292,8 +292,66 @@ footer > p {
 		width: 500px;
 		height: 500px;
 	}
+}
 
-	.fourth-container {
+@media (min-width: 1024px) {
+	.first-container {
+		height: 400px;
+	}
 
+	.first-container .logo {
+		width: 200px;
+	}
+
+	.first-container .logo-text {
+		font-size: 6rem;
+	}
+
+	.second-container.container {
+		justify-content: space-evenly;
+	}
+
+	.third-container .contact {
+		width: 400px;
+		height: 400px;
+	}
+
+	.contact-forms-wrapper {
+		width: 100%;
+		flex-direction: row;
+		justify-content: space-evenly;
+	}
+
+	.contact > img {
+		width: 400px;
+	}
+
+	.form-wrapper {
+		width: 80%;
+	}
+
+	.input-field {
+		font-size: 2rem;
+		font-weight: normal;
+		height: 7rem;
+		padding: 8px;
+		border: solid 3px var(--color05);
+		border-radius: 10px;
+		color: white;
+		background-color: var(--color03);
+		box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);	
+	}
+
+	.textarea {
+		height: 15rem;
+	}
+
+	.form-btn {
+		font-size: 3.2rem;
+		height: 8rem;
+	}
+	
+	footer > p {
+		font-size: 18px;
 	}
 }
