--- a/styles/contato.css
+++ b/styles/contato.css
@@ -28,6 +28,7 @@ body {
 
 .first-container .logo {
 	width: 100px;
+  transform: translateX(5%);
 }
 
 .first-container .logo-text {
@@ -106,11 +107,12 @@ body {
 }
 
 .contact > img {
-	transition: 0.3s ease-in-out;
+  transition: 0.3s ease-in-out;
 }
 
 .contact:hover > img {
-	opacity: 0;
+  position: absolute;
+  opacity: 0;
 }
 
 /* Fourth Container */
@@ -137,6 +139,7 @@ form {
 	display: flex;
 	flex-direction: column;
 	grid-column: 2/12;
+  gap: 5px;
 	padding: 20px;
 	border-radius: 10px;
 	background: #1B8C57;
@@ -144,6 +147,7 @@ form {
 
 .row {
 	display: flex;
+  gap: 5px;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 100%;
@@ -158,6 +162,14 @@ form {
 	background: #5EA689;
 	color: white;
 	box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+.input:focus {
+  outline: none;
+}
+
+.input::placeholder {
+  color: rgb(201, 199, 199);
 }
 
 textarea.input {
@@ -269,8 +281,7 @@ footer > p {
 	form {
 		display: flex;
 		flex-direction: column;
-		row-gap: 10px;
-		grid-column: 2/12;
+    grid-column: 2/12;
 		padding: 20px;
 		border-radius: 10px;
 		background: #1B8C57;
@@ -280,6 +291,7 @@ footer > p {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
+    gap: 0;
 		width: 100%;
 	}
 
