--- a/styles/home.css
+++ b/styles/home.css
@@ -28,11 +28,11 @@ Padrão da estilização (que eu vo tentar seguir):
   justify-content: space-around;
   align-items: center;
   width: 100vw;
-  height: 52rem;
+  height: 35vh;
   background-image: url("../images/Home/Hero/hero-template.webp");
-  background-position: bottom left;
-  background-attachment: fixed;
+	background-position: bottom left;
   background-size: cover;
+	background-repeat: no-repeat;
   box-shadow: inset 0rem 0.1rem 2rem 0rem black;
 }
 
@@ -43,17 +43,17 @@ Padrão da estilização (que eu vo tentar seguir):
 
 .hero__text__title {
   font-family: "Roboto";
-  font-size: 7rem;
+  font-size: 5rem;
   font-weight: 900;
 }
 
 .hero__text__paragraph {
   font-family: var(--normal-font);
-  font-size: 3.6rem;
+  font-size: 2rem;
 }
 
 .button-novidades {
-  font-size: 2.3rem;
+  font-size: 2rem;
   text-decoration: underline;
   border-radius: 10px;
   cursor: pointer;
@@ -68,170 +68,106 @@ Padrão da estilização (que eu vo tentar seguir):
 /*              Courses               */
 /* ================================== */
 .courses__title {
-  font-family: "Roboto", sans-serif;
-  font-size: 3rem;
-  font-weight: bolder;
-  text-align: center;
-  max-width: 60rem;
-  margin: 0px auto;
-  margin-top: 2rem;
-  margin-bottom: 4rem;
-  border-bottom: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 5.5rem;
 }
 
-.courses__cards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 1fr 1fr;
-  justify-content: center;
-  justify-items: center;
-  row-gap: 2rem;
-  max-width: 140rem;
-  margin: 2rem auto;
+.courses__title > h2 {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.8rem;
+  font-weight: bolder;
+  border-bottom: 1px solid black;
 }
 
 /* ================================== */
 /*                Card                */
 /* ================================== */
-.card {
-  font-family: var(--normal-font);
-  text-indent: 1rem;
+.cards-container {
   display: flex;
-  flex-direction: column;
-  width: 420px;
-  height: 450px;
-  border-radius: 1rem;
-  box-shadow: 0.6rem 0.4rem 0.8rem rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+	flex-wrap: wrap;
+	gap: 15px;
+	justify-content: space-between;
+	width: 80%;
+  height: fit-content;
+	margin: 0 auto;
+	padding-bottom: 15px;
 }
 
-.card:hover {
-  box-shadow: 0.4rem 0.8rem 1.6rem rgba(0, 0, 0, 0.2);  
-  transform: translateY(-0.5rem);
+.card {
+	display: flex;
+	flex-direction: column;
+	width: 90vw;
+	height: fit-content;
+	border-radius: 8px;
+	box-shadow: 3px 3px 16px rgba(0, 0, 0, 0.196);
 }
 
-.card__image {
-  width: 420px;
-  height: 400px;
-  border-radius: 1rem 1rem 0px 0px;
+.card .img-wrapper { 
+	height: fit-content;
 }
 
-.card__title {
-  font-size: 2rem;
-  background-color: green;
-  color: white;
+.card .img-wrapper img {
+	position: relative;
+	border-radius: 8px 8px 0px 0px;
+	width: 100%;
 }
 
-.card__description {
-  font-weight: 500;
-  font-size: 1.8rem;
-  height: 10rem;
-  margin-top: 5px;
+.card-text {
+	transform: translateY(-5px);
 }
 
-.card__btn {
-  font-size: 1.6rem;
-  color: white;
-  align-self: center;
-  min-width: 20rem;
-  margin: 1rem;
-  padding: 0.5rem;
-  border: 1px solid var(--color03);
-  border-radius: 0.6rem;
-  background-color: var(--color03);
-  box-shadow: 0rem 0.5rem 0.3rem rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
+.card-title {
+	position: relative;
+	color: white;
+	font-size: 2.5rem;
+	padding: 0px 10px;
+	background-color: var(--color04);
 }
 
-.card__btn:active {
-  box-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.2);
-  transform: translateY(0.4rem);
+.card-title::before {
+	opacity: 0.5;
+	content: '';
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 15px;
+	height: 100%;
+	background: var(--color02);
 }
 
-.center-grid {
-  grid-column-start: 2;
+.card-description {
+	font-size: 1.8rem;
+	padding: 0px 10px;
+	transform: translateY(3px);
+}
+
+.card-list {
+	padding: 0px 5px;
+	font-size: 1.8rem;
+	padding: 0px 20px;
+}
+
+.btn-wrapper {
+	display: flex;
+	justify-content: center;
+	width: 100%;
+}
+
+.know-more-btn {
+	color: white;
+	background-color: var(--color03);
+	padding: 5px 15px;
+	margin: 0px auto;
+	border: 0;
+	border-radius: 4px;
 }
 
 /* ================================== */
 /*          Courses Detailed          */
 /* ================================== */
-.courses__detailed {
-  font-family: var(--normal-font);
-  color: white;
-  margin-bottom: 0rem;
-  width: 100%;
-  height: 60rem;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  background-attachment: fixed;
-  box-shadow: inset -0.2rem 0.1rem 3rem 0rem black;
-  overflow: hidden;
-  transition: 0.5s;
-}
-
-.text__detailed {
-  position: relative;
-  top: 3rem;
-  left: 3rem;
-  width: 60rem;
-  padding: 1rem;
-  border-radius: 1rem;
-  background-color: rgba(128, 128, 128, 0.453);
-  background-attachment: fixed;
-}
-
-.title__detailed {
-  font-family: "Roboto", sans-serif;
-  font-size: 6rem;
-  font-weight: 900;
-  font-variant: small-caps;
-}
-
-.description__detailed {
-  font-size: 1.8rem;
-}
-
-#retroescavadeira {
-  background-image: url("../images/Home/Fotos-Detalhadas/escavadeira.webp");
-  background-position: center left;
-}
-
-#solda {
-  background-image: url("../images/Home/Fotos-Detalhadas/solda.webp");
-  background-position: center center;
-  background-size: cover;
-}
-
-#empilhadeira {
-  background-image: url("../images/Home/Fotos-Detalhadas/empilhadeira.webp");
-  background-position: top center;
-}
-
-#formacao {
-  background-image: url("../images/Home/Fotos-Detalhadasmecanico-florestal.webp");
-  background-size: cover;
-}
-
-#teoria {
-  background-image: url("../images/Home/Fotos-Detalhadas/teoria-pratica.webp")
-}
-
-#maquinas-florestais {
-  background-image: url("../images/Home/Fotos-Detalhadas/maquina-florestal.webp");
-}
-
-#empresa {
-  background-image: url("../images/Home/Fotos-Detalhadas/floresta.webp");
-}
-
-.hide {
-  display: none;
-}
-
-.unhide {
-  display: block;
-}
 
 /* ================================== */
 /*               Footer               */
