--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -26,6 +26,8 @@
 	position: relative;
 	font-size: 1.8rem;
 	font-weight: 800;
+	width: 100%;
+	height: 100%;
 	color: var(--color05);
 	text-transform: uppercase;	
 	transition: 0.3s ease-in-out;
