--- a/styles/home.css
+++ b/styles/home.css
@@ -28,7 +28,7 @@ Padrão da estilização (que eu vo tentar seguir):
   justify-content: space-around;
   align-items: center;
   width: 100vw;
-  height: 35vh;
+  height: 40vh;
   background-image: url("../images/Home/Hero/hero-template.webp");
 	background-position: center center;
   background-size: cover;
@@ -39,6 +39,7 @@ Padrão da estilização (que eu vo tentar seguir):
 .hero__text {
   text-align: center;
   color: white;
+  text-shadow: 0px 1px 8px rgba(0, 0, 0, 0.359);
 }
 
 .hero__text__title {
@@ -49,7 +50,7 @@ Padrão da estilização (que eu vo tentar seguir):
 
 .hero__text__paragraph {
   font-family: var(--normal-font);
-  font-size: 2rem;
+  font-size: 2.3rem;
 }
 
 .button-novidades {
@@ -72,14 +73,15 @@ Padrão da estilização (que eu vo tentar seguir):
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 5.5rem;
+  height: 10rem;
 }
 
 .courses__title > h2 {
+  text-align: center;
   font-family: "Roboto", sans-serif;
-  font-size: 1.8rem;
+  font-size: 2.8rem;
   font-weight: bolder;
-  border-bottom: 1px solid black;
+  text-decoration: underline;
 }
 
 /* ================================== */
@@ -119,7 +121,7 @@ Padrão da estilização (que eu vo tentar seguir):
   text-align: center;
 	color: white;
 	font-size: 2.6rem;
-  padding: 0 10px;
+  padding: 2px 10px;
 	background-image: linear-gradient(to left, var(--color05), var(--color04), var(--color05));
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.161);
 }
@@ -143,17 +145,15 @@ Padrão da estilização (que eu vo tentar seguir):
 }
 
 .card-list li {
-  position: relative;
   display: flex;
-  gap: 5px;
   padding-left: 20px;
 }
 
 .list-marker {
-  position: absolute;
   align-self: flex-start;
-  width: 1.3rem;
-  transform: translate(-100%, 60%);
+  height: 1.8rem;
+  font-size: 1.8rem;
+  transform: translateY(28%);
 }
 
 .btn-wrapper {
@@ -171,6 +171,16 @@ Padrão da estilização (que eu vo tentar seguir):
 	padding: 8px 15px;
 	border: 0;
 	border-radius: 4px;
+  box-shadow: 0px 3px 0px rgba(36, 36, 36, 0.552);
+}
+
+.know-more-btn:hover {
+  filter: brightness(0.95);
+}
+
+.know-more-btn:active {
+  box-shadow: 0px 1px 0px rgb(0, 0, 0);
+  transform: translateY(2px);
 }
 
 /* ================================== */
@@ -184,15 +194,15 @@ Padrão da estilização (que eu vo tentar seguir):
   font-family: var(--normal-font);
   font-size: 1.8rem;
   text-align: center;
-  background-color: var(--contrast-color);
+  background-color: rgb(38, 38, 38);
 }
 
 .footer__text {
+  color: white;
   font-weight: 600;
-  color: black;
   padding: 1.5rem;
 }
 
 .footer__link {
-  color: black;
+  color: white;
 }
