--- a/styles/home.css
+++ b/styles/home.css
@@ -165,7 +165,7 @@ Padrão da estilização (que eu vo tentar seguir):
 
 .link-wrapper > a {
   font-size: 1.8rem;
-  color: var(--color01);
+  color: white;
   text-shadow: 1px 1px rgba(0, 0, 0, 0.171);
   padding: 5px 12px;
   border-radius: 8px;
@@ -194,6 +194,7 @@ Padrão da estilização (que eu vo tentar seguir):
   font-size: 2rem;
   line-height: 1.2em;
   padding: 30px;
+  padding-top: 0;
 }
 
 .title-content {
@@ -201,11 +202,11 @@ Padrão da estilização (que eu vo tentar seguir):
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 4em;
 }
 
 .title-content > h2 {
   font-size: 4rem;
-  transform: translateY(-50%);
 }
 
 .text {
@@ -230,8 +231,13 @@ Padrão da estilização (que eu vo tentar seguir):
 }
 
 .text ol {
-  padding: 20px 40px;
+  padding: 10px 20px;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.346);
+}
+
+.text ol li {
+  font-size: 1.8rem;
+  padding-bottom: 5px;
 }
 
 #solda {
