--- a/styles/home.css
+++ b/styles/home.css
@@ -203,6 +203,7 @@ Padrão da estilização (que eu vo tentar seguir):
   align-items: center;
   width: 100%;
   height: 4em;
+  text-decoration: underline
 }
 
 .title-content > h2 {
@@ -214,7 +215,7 @@ Padrão da estilização (que eu vo tentar seguir):
   flex-direction: column;
   width: 80vw;
   margin: 0 auto;
-  background-color: rgba(128, 128, 128, 0.252);
+  background-color: rgba(122, 122, 122, 0.456);
   padding: 15px;
   border-radius: 16px;
 }
@@ -233,15 +234,21 @@ Padrão da estilização (que eu vo tentar seguir):
 .text ol {
   padding: 10px 20px;
   text-shadow: 2px 2px rgba(0, 0, 0, 0.346);
+  counter-reset: solda-li 0;
 }
 
 .text ol li {
   font-size: 1.8rem;
   padding-bottom: 5px;
+  counter-increment: solda-li;
+}
+
+.text ol li::marker {
+  content: counter(solda-li) ". ";
 }
 
 #solda {
-  background-image: url(../images/Home/Fotos-Detalhadas/solda.webp);
+  background-image: url(../images/Home/Fotos-Detalhadas/celular/solda-celular.jpg);
   background-size: cover;
 }
 
