voltei a foto antifga no card detalhada de solda

--- a/styles/home.css
+++ b/styles/home.css
@@ -248,7 +248,7 @@ Padrão da estilização (que eu vo tentar seguir):
 }
 
 #solda {
-  background-image: url(../images/Home/Fotos-Detalhadas/celular/solda-celular.jpg);
+  background-image: url(../images/Home/Fotos-Detalhadas/solda.webp);
   background-size: cover;
 }
 
