teste das especificações dos cursos

--- a/styles/home.css
+++ b/styles/home.css
@@ -21,6 +21,14 @@ Padrão da estilização (que eu vo tentar seguir):
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 /* ================================== */
+/*           Regras Globais           */
+/* ================================== */
+ul {
+  list-style: none;
+}
+
+
+/* ================================== */
 /*          Principal Hero            */
 /* ================================== */
 .hero {
@@ -192,18 +200,22 @@ Padrão da estilização (que eu vo tentar seguir):
   flex-direction: column;
   color: white;
   font-size: 2rem;
+  height: 80vh;
   line-height: 1.2em;
   padding: 30px;
   padding-top: 0;
 }
 
 .title-content {
+  font-family: "Roboto", sans-serif;
+  text-align: center;
   display: flex;
   justify-content: center;
   align-items: center;
+  line-height: 2em;
   width: 100%;
-  height: 4em;
-  text-decoration: underline
+  height: fit-content;
+  padding: 10px;
 }
 
 .title-content > h2 {
@@ -213,7 +225,7 @@ Padrão da estilização (que eu vo tentar seguir):
 .text {
   display: flex;
   flex-direction: column;
-  width: 80vw;
+  width: 85vw;
   margin: 0 auto;
   background-color: rgba(122, 122, 122, 0.456);
   padding: 15px;
@@ -249,6 +261,16 @@ Padrão da estilização (que eu vo tentar seguir):
 
 #solda {
   background-image: url(../images/Home/Fotos-Detalhadas/solda.webp);
+  background-size: cover;
+}
+
+#harvester-de-esteira {
+  background-image: url(../images/Home/Fotos-Detalhadas/celular/harvester-de-esteira.png);
+  background-size: cover;
+}
+
+#forwarder {
+  background-image: url(../images/Home/Fotos-Detalhadas/celular/forwarder-celular.jpg);
   background-size: cover;
 }
 
