--- a/styles/home.css
+++ b/styles/home.css
@@ -198,6 +198,8 @@ ul {
 .content {
   display: flex;
   flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
   color: white;
   font-size: 2rem;
   height: 80vh;
@@ -226,6 +228,7 @@ ul {
   display: flex;
   flex-direction: column;
   width: 85vw;
+  height: max-content;
   margin: 0 auto;
   background-color: rgba(122, 122, 122, 0.456);
   padding: 15px;
