--- a/styles/contato.css
+++ b/styles/contato.css
@@ -89,6 +89,8 @@ body {
 }
 
 .contact {
+	overflow: hidden;
+	position: relative;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -101,7 +103,7 @@ body {
 .contact img {
 	position: absolute;
 	transition: 0.3s ease-in;
-	width: 40%;
+	width: 65%;
 }
 
 .contact ul {
@@ -148,15 +150,15 @@ form {
 	display: flex;
 	flex-direction: column;
 	grid-column: 2/12;
-  gap: 5px;
-	padding: 20px;
+	gap: 5px;
+	padding: 15px;
 	border-radius: 10px;
 	background: #1B8C57;
 }
 
 .row {
 	display: flex;
-  gap: 5px;
+	gap: 3px;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 100%;
@@ -165,7 +167,7 @@ form {
 .input {
 	font-size: 2.5rem;
 	width: 100%;
-	padding: 20px;
+	padding: 18px;
 	border: 3px solid #155939;
 	border-radius: 10px;
 	background: #5EA689;
@@ -220,6 +222,10 @@ footer > p {
 }
 
 @media (min-width: 768px) {
+	.contact:nth-child(2) ul {
+		font-size: 2rem;
+	}
+	
 	.first-container {
 		height: 300px;
 	}
@@ -290,7 +296,7 @@ footer > p {
 	form {
 		display: flex;
 		flex-direction: column;
-    grid-column: 2/12;
+		grid-column: 2/12;
 		padding: 20px;
 		border-radius: 10px;
 		background: #1B8C57;
@@ -300,7 +306,7 @@ footer > p {
 		display: flex;
 		flex-direction: row;
 		justify-content: space-between;
-    gap: 0;
+		gap: 0;
 		width: 100%;
 	}
 
