--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -153,3 +153,22 @@
 		display: none;
 	}
 }
+
+.active-link {
+position: relative;
+}
+
+.active-link::after {
+position: absolute;
+content: '';
+bottom: 0;
+left: 0;
+width: 100%;
+height: 1px;
+background-color: #155939;
+transition: 0.3s ease-in-out;
+}
+
+.active-link:hover::after {
+opacity: 0;
+}
